--- a/KLS_WEB/KLS_WEB/Views/Tracking/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Tracking/Index.cshtml
@@ -63,10 +63,10 @@
                     <label class="form-label size-14">CLIENTE</label>
                     <select asp-items="Model.Selects.Customers" multiple="multiple" name="customers[]" class="form-select" onchange="DT(null, this)" style="width: 100%;" data-selected-text-format="count" data-live-search="true"></select>
                 </div>
-                @*<div class="col-3">
-                        <label class="form-label size-14">ESTATUS</label>
-                        <select asp-items="Model.Selects.Statuses" class="form-select" onchange="DT(null, 'status', true, this.value), GetSubstatuses(this.value)" style="width: 100%;" data-live-search="true"></select>
-                    </div>*@
+                <div class="col-3">
+                    <label class="form-label size-14">ESTATUS</label>
+                    <select asp-items="Model.Selects.Statuses" class="form-select" onchange="DT(null, 'status', true, this.value), GetSubstatuses(this.value)" style="width: 100%;" data-live-search="true"></select>
+                </div>
                 <div class="col-3">
                     <label class="form-label size-14">SUBESTATUS</label>
                     <select id="substatuses" class="form-select" onchange="DT(null, 'substatus', true, this.value)" style="width: 100%;" data-live-search="true"></select>
@@ -167,25 +167,84 @@
             <div class="modal-body">
                 <form>
                     <div class="row mb-3">
-                        <label for="inputEmail3" class="col-sm-2 col-form-label size-12 text-uppercase">Email</label>
-                        <div class="col-10">
-                            <input type="email" class="form-control" id="inputEmail3">
+                        <label class="col-3 col-form-label size-12 text-uppercase">Transportista</label>
+                        <div class="col-9">
+                            <input type="text" class="form-control" id="transportista" disabled>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label for="inputPassword3" class="col-sm-2 col-form-label size-12 text-uppercase">Password</label>
-                        <div class="col-10">
-                            <input type="password" class="form-control" id="inputPassword3">
+                        <label class="col-3 col-form-label size-12 text-uppercase">Conductor</label>
+                        <div class="col-9">
+                            <input type="text" class="form-control" id="conductor" disabled>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label class="col-3 col-form-label size-12 text-uppercase">Origen</label>
+                        <div class="col-9">
+                            <input type="text" class="form-control" id="origen" disabled>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label class="col-3 col-form-label size-12 text-uppercase">Destino</label>
+                        <div class="col-9">
+                            <input type="text" class="form-control" id="destino" disabled>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label class="col-3 col-form-label size-12 text-uppercase">Teléfono</label>
+                        <div class="col-9">
+                            <input type="text" class="form-control" id="telefono" disabled>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label class="col-3 col-form-label size-12 text-uppercase">Tipo de unidad</label>
+                        <div class="col-9">
+                            <input type="text" class="form-control" id="tipodeunidad" disabled>
                         </div>
                     </div>
                 </form>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">CERRAR</button>
+        </div>
+    </div>
+</div>
+
+@*Checkpoints*@
+<div class="modal fade" id="checkpointModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">CHECKPOINTS</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <table id="table" class="table table-striped table-bordered display table-hover table-monitoreo" width="100%">
+                            <thead>
+                                <tr>
+                                    <th>CHECKPOINT</th>
+                                    <th>HORA ORIGINAL</th>
+                                    <th>HORA ESPERADA</th>
+                                    <th>HORA REAL</th>
+                                    <th>USUARIO</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody id="table-checkpoint-info">
+                                <tr>
+                                    <td colspan="8">Cargando....</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+@*Checkpoints*@
 
 @section Scripts{
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
@@ -200,7 +259,6 @@
 
     <script>
         $(() => {
-            //GetSubstatuses(3);
             $('select').selectpicker();
             DT();
         })
@@ -222,8 +280,6 @@
                 method: 'POST',
                 body: new FormData(e)
             };
-
-            console.log([...new FormData(e)]);
 
             try {
                 const response = await fetch('/Tracking/AddSectionComment', params);
@@ -275,8 +331,14 @@
             try {
                 const response = await fetch(`/Tracking/GetDetails?SectionId=${SectionId}`);
                 const data = await response.json();
-                response.ok && $('#sectiondetail').modal('show');
-                console.log(data);
+                const { transportista, conductor, origen, destino, tipoDeUnidad, telefono } = data;
+                $('#transportista').val(transportista);
+                $('#conductor').val(conductor);
+                $('#origen').val(origen);
+                $('#destino').val(destino);
+                $('#telefono').val(telefono);
+                $('#tipodeunidad').val(tipoDeUnidad);
+                $('#sectiondetail').modal('show');
             } catch (e) {
                 console.error(e);
             }
@@ -347,31 +409,32 @@
                             let countdown = setInterval(() => {
                                 const now = new Date().getTime();
                                 const distance = countDownDate - now;
+                                const isDelayed = distance < 0;
 
-                                const days = Math.floor(distance / (1000 * 60 * 60 * 24)).toString().padStart(2, '0');
-                                const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)).toString().padStart(2, '0');
-                                const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60)).toString().padStart(2, '0');
-                                const seconds = Math.floor((distance % (1000 * 60)) / 1000).toString().padStart(2, '0');
+                                const days = Math.floor(distance / (1000 * 60 * 60 * 24)).toString().padStart(2, '0').replace('-', '');
+                                const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)).toString().padStart(2, '0').replace('-', '');
+                                const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60)).toString().padStart(2, '0').replace('-', '');
+                                const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-                                const countDown = `${days}d ${hours}:${minutes}:${seconds}`;
-                                const html = `<p>SIGUIENTE CONTACTO EN:<br> <b>${countDown}</b></p><p>ETA: ${eta}</p> <p>GRUPO MONITOR: ${grupoMonitor}</p>`;
-                                document.querySelector(`#timer${sectionId}`).innerHTML = html;
-                                if (distance < 0) {
-                                    document.querySelector(`#timer${sectionId}`).innerHTML = `<p>SIGUIENTE CONTACTO EN:<br> <b class="text-danger">DEMORADO</b></p><p>ETA: ${eta}</p> <p>GRUPO MONITOR: ${grupoMonitor}</p>`;
-                                }
+                                const countDown = `${isDelayed ? 'DEMORADO:' : ''} ${days}d ${hours}:${minutes}:${seconds.toString().padStart(2, '0').replace('-', '')}`;
+                                const html = `<p>SIGUIENTE CONTACTO EN:<br> <b ${isDelayed ? 'class="text-danger"' : ''}>${countDown}</b></p><p>ETA: ${eta}</p> <p>GRUPO MONITOR: ${grupoMonitor}</p>`;
+                                $(`#timer${sectionId}`).empty().html(html);
                             }, 1000);
 
                             return countdown;
                         }
                     },
                     {
-                        data: 'status'
+                        render: (data, type, row) => {
+                            const { sectionId, travelId, status } = row;
+                            return `<a href="/Travels/AddEdit/${travelId}/${sectionId}">${status}</a>`;
+                        }
                     },
                     {
                         render: (data, type, row) => {
-                            const { hasCheckpoint, sectionId } = row;
+                            const { hasCheckpoints, sectionId, checkpoint, rutaId, fechaSalida } = row;
                             let html = `<a href="javascript:void(0)" onclick="$('#comentarioModal').modal('show'), $('[name=SectionId]').val(${sectionId})"><span class="material-icons">control_point</span></a>`;
-                            html += hasCheckpoint ? `<a href="javascript:void(0)" class="d-flex flex-column text-danger"><span class="material-icons">assistant_photo</span>${checkpoint}</a> ` : '';
+                            html += hasCheckpoints ? `<a href="javascript:void(0)" class="d-flex flex-column text-danger" onclick="verCheckpoint(${sectionId},${rutaId},'${fechaSalida}');"><span class="material-icons">assistant_photo</span>${checkpoint}</a> ` : '';
                             return html;
                         }
                     }
@@ -386,6 +449,122 @@
                     $('#table_length').html(`<a href="/Travels/AddEdit/0/0" class="btn btn-sm btn-outline-secondary float-right"><span class="material-icons">add</span></a>`).show();
                 }
             });
+        }
+
+        function verCheckpoint(idviaje, idruta, fechasalida) {
+            console.log(fechasalida);
+            var catCheckpoints = [];
+            var catSecChecpoints = [];
+            var horaOriginal = 0;
+            var horaOriginal1 = 0;
+            var fechaSalidaView = ``;
+
+            //Dos variables para la validacion de fechas de hora esperada
+            var horaEsperadaView = ``; //La hora esperada que se mostrara en la tabla
+            var horaEsperadaView1 = ``; //La hora esperada que se mostrara en la tabla
+            var banderaHoraEsperada = 0;
+            //Inicio checpoints
+            $.get("/Monitoring/getCheckpoints/" + idruta, function (res) {
+                catCheckpoints = res;
+                //Obtener los checkpoints de las secciones
+                $.get("/Monitoring/getSCheckpoints/" + idviaje, function (resCheck) { //Seccion
+                    catSecChecpoints = resCheck;
+                    $("#table-checkpoint-info").empty();//Vaciar la tabla de registros de checkpoints
+                    var trInfo = `<tr>`;
+                    var i = 0;
+                    var colorCheck = "green";
+                    //Recorrer catalogo catSecChecpoints
+                    $.each(catCheckpoints, function (item, key) {
+                        i++;
+                        horaOriginal = horaOriginal + key.tiempo;
+                        horaOriginal1 = horaOriginal1 + key.tiempo;
+
+                        fechaSalidaView = moment(fechasalida).add(horaOriginal, 'hours').format('YYYY-MM-DD hh:mm:ss'); //Siempre va
+                        var hReal, createdBy, btnActive, hEsperada = ``;
+                        let indice = catSecChecpoints.findIndex(service => service.idCheckpoint == key.id);
+
+                        if (indice >= 0) {
+                            banderaHoraEsperada = 1;
+                            //Aqui ya tenemos una hora real
+                            hReal = `<td>${moment(catSecChecpoints[indice].horaReal).format('YYYY-MM-DD hh:mm:ss')}</td>`;
+                            createdBy = `<td>${catSecChecpoints[indice].createdBy}</td>`;
+                            btnActive = `<td><button class="btn btn-sm" disabled="disabled"><span class="material-icons">save</span></button></td>`;
+                            horaOriginal1 = 0;
+                            horaEsperadaView = catSecChecpoints[indice].horaReal;
+                        } else {
+                            hReal = `<td><input type="datetime-local" class="form-control form-control-sm" id="horaReal-${idviaje}"></td>`;
+                            createdBy = `<td></td>`;
+                            btnActive = `<td>
+                                                <button class="btn btn-sm" onclick="saveCheckpoint(${idviaje},${key.id},${idruta},'${fechasalida}');">
+                                                    <span class="material-icons">save</span>
+                                                </button>
+                                            </td>`;
+                        }
+
+                        if (parseInt(i) <= 1) {
+                            hEsperada = `<td>${moment(fechasalida).add(horaOriginal, 'hours').format('YYYY-MM-DD hh:mm:ss')}</td>`;
+                        } else {
+                            if (banderaHoraEsperada == 0) {
+                                hEsperada = `<td>${moment(fechasalida).add(horaOriginal1, 'hours').format('YYYY-MM-DD hh:mm:ss')}</td>`;
+                            } else {
+                                if (horaOriginal1 == 0) {
+                                    let horadif = moment(horaEsperadaView1).diff(fechaSalidaView, 'minutes');
+                                    horadif = horadif * 1;
+
+                                    //if (horadif >= 1) {
+                                    //    colorCheck = "red";
+                                    //}
+
+                                    let fecha = moment(fechaSalidaView).add(horadif, 'minutes').format('YYYY-MM-DD hh:mm:ss');
+                                    let horaEsp = moment(fecha).add(key.tiempo, 'hours').format('YYYY-MM-DD hh:mm:ss');
+                                    console.log(moment(fechaSalidaView).isAfter(horaEsp));
+                                    //if (moment(fechaSalidaView).diff(horaEsp) > 1) {
+                                    //    colorCheck = "red";
+                                    //}
+                                    if (moment(horaEsp).isAfter(fechaSalidaView)) {
+                                        colorCheck = "red";
+                                    }
+                                    hEsperada = `<td>${horaEsp}</td>`;
+                                } else {
+                                    let horadif = moment(horaEsperadaView).diff(fechaSalidaView, 'minutes');
+                                    horadif = horadif * 1;
+
+                                    //if (horadif >= 1) {
+                                    //    colorCheck = "red";
+                                    //}
+
+                                    let fecha = moment(fechaSalidaView).add(horadif, 'minutes').format('YYYY-MM-DD hh:mm:ss')
+                                    let horaEsp = moment(fecha).add(horaOriginal1, 'hours').format('YYYY-MM-DD hh:mm:ss');
+
+                                    //if (moment(fechaSalidaView).diff(horaEsp) > 1) {
+                                    //    colorCheck = "red";
+                                    //}
+                                    if (moment(horaEsp).isAfter(fechaSalidaView)) {
+                                        colorCheck = "red";
+                                    }
+
+                                    hEsperada = `<td>${horaEsp}</td>`;
+                                }
+                            }
+                        }
+
+                        trInfo += `<td> <div style="height:10px;width:10px;background:${colorCheck};-moz-border-radius:50px;-webkit-border-radius:50px;border-radius:50px;display: inline-block;"></div> ${key.checkpoint}</td>`;
+                        trInfo += `<td>${fechaSalidaView}</td>`;
+                        trInfo += hEsperada + hReal + createdBy + btnActive + `</tr>`;
+
+                        //Fin pintar tabla
+                        if (indice >= 0) {
+                            horaEsperadaView1 = catSecChecpoints[indice].horaReal;
+                        }
+
+                    });
+                    $("#table-checkpoint-info").append(trInfo);
+                    //Fin recorrer catalogo catSecChecpoints
+                });
+                //Obtener los checkpoints de las secciones
+            });
+            //Fin checkpoints
+            $("#checkpointModal").modal("show");
         }
     </script>
 }
